--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "packageManager": "pnpm@10.11.0",
   "version": "0.0.0",
   "description": "前端界面预览服务",
+  "license": "MIT",
   "files": [
     "dist",
     "ci.js"
   ],
+  "keywords": [
+    "preview",
+    "serve"
+  ],
+  "author": {
+    "name": "whitekite",
+    "email": "1075790909@qq.com"
+  },
   "bin": {
     "preview-serve": "./ci.js"
   },
@@ -34,7 +43,7 @@
     "citty": "^0.1.6",
     "consola": "^3.4.2",
     "defu": "^6.1.4",
-    "esconf": "^0.5.1",
+    "esconf": "^1.0.0",
     "h3": "^1.15.3",
     "httpxy": "^0.1.7",
     "listhen": "^1.9.0",
@@ -51,8 +60,11 @@
     "eslint": "^9.27.0",
     "prettier": "^3.5.3",
     "publint": "^0.3.12",
-    "tsdown": "^0.12.0",
+    "tsdown": "^0.12.1",
     "typescript": "^5.8.3",
     "unplugin-unused": "^0.5.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
