--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "packageManager": "pnpm@10.11.0",
   "version": "0.0.1",
-  "description": "前端界面预览服务",
+  "description": "web打包目录预览服务",
   "license": "MIT",
   "files": [
     "dist",
