--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preview-serve",
   "type": "module",
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.12.1",
   "version": "0.0.2",
   "description": "web打包目录预览服务",
   "license": "MIT",
@@ -32,6 +32,7 @@
   "module": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js",
+    "./h3": "./dist/h3.js",
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -44,25 +45,24 @@
     "consola": "^3.4.2",
     "defu": "^6.1.4",
     "esconf": "^1.0.0",
-    "h3": "^1.15.3",
+    "h3": "2.0.0-beta.0",
     "httpxy": "^0.1.7",
-    "listhen": "^1.9.0",
     "mime": "^4.0.7",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22.15.23",
+    "@types/node": "^22.15.31",
     "@vill-v/bumpp-github": "^3.0.0",
     "@vill-v/eslint-config": "^3.3.1",
     "@vill-v/prettier-config": "^1.0.0",
     "@vill-v/tsconfig": "^1.0.1",
     "automd": "^0.4.0",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "prettier": "^3.5.3",
     "publint": "^0.3.12",
-    "tsdown": "^0.12.4",
+    "tsdown": "^0.12.7",
     "typescript": "^5.8.3",
-    "unplugin-unused": "^0.5.0"
+    "unplugin-unused": "^0.5.1"
   },
   "publishConfig": {
     "access": "public"
