--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "preview-serve",
   "type": "module",
   "packageManager": "pnpm@10.12.1",
-  "version": "0.0.2",
+  "version": "0.1.0-beta.1",
   "description": "web打包目录预览服务",
   "license": "MIT",
   "files": [
