--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "h3": "^1.15.3",
     "httpxy": "^0.1.7",
     "listhen": "^1.9.0",
-    "mime": "^4.0.7",
+    "mrmime": "^2.0.1",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
