--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -16,4 +16,5 @@ jobs:
       id-token: write # The OIDC ID token is used for authentication with JSR.
     steps:
       - uses: actions/checkout@v4
+      - run: pnpm install
       - run: npx jsr publish
