--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -16,5 +16,10 @@ jobs:
       id-token: write # The OIDC ID token is used for authentication with JSR.
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
       - run: pnpm install
       - run: npx jsr publish
