--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "esconf": "^1.0.0",
     "h3": "2.0.0-beta.0",
     "httpxy": "^0.1.7",
-    "mime": "^4.0.7",
+    "mrmime": "^2.0.1",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
